# heavy_text2sql

./: .env.example  .gitignore  README.md  edfi_text2sql_plan.md  pyproject.toml
configs/: default.yaml  domain_overrides.yaml
data/edfi/: sample_demo.sqlite
data/eval/: gold_queries_bootstrap.yaml  query_classifier_benchmark.yaml  tough_questions.yaml
data/eval/runs/: bench_llms.json  bench_llms.md  bench_llms_no_reasoning.json  bench_llms_no_reasoning.md  last.json  last.md  tough.json  tough.md  tough_northridge.json  tough_northridge.md
docs/: Project_Status_30Apr.pptx  architecture_deck.pptx  build_architecture_deck.py  pivot_change_plan.md
scripts/: bench_llms.py  build_sample_demo_csvs.py  build_sample_demo_sqlite.py  pull_edfi_dataset.py  stress_test.py
